A bunch of corrections based on LGTM analysis